refactors styling for coach login page --> still working on a few spacing issues with the mobile view

--- a/src/components/clients/loginClient/loginClient.scss
+++ b/src/components/clients/loginClient/loginClient.scss
@@ -1,103 +1,110 @@
 .creds-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
-    font-size: 1.8rem;
-    background-color: #274160;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	margin: 0 auto;
+	font-size: 1.8rem;
+	background-color: #274160;
 
-    .img-container {
-        text-align: center;
-        color: white;
-        margin-bottom: 50px;
-    }
+	.img-container {
+		text-align: center;
+		color: white;
+		margin-bottom: 50px;
+	}
 
-    p {
-        font-family: 'DM Sans', sans-serif;
-        font-size: 1.5rem;
-        line-height: 20px;
+	p {
+		font-family: "DM Sans", sans-serif;
+		font-size: 1.5rem;
+		line-height: 20px;
 
-        a{
-            color: black;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 25px;
-        }
-    }
+		a {
+			color: black;
+			text-decoration: none;
+			font-weight: bold;
+			border-radius: 25px;
+		}
+	}
+	@media (max-width: 800px) {
+		padding-top: 5em;
+
+		.img-container {
+			margin-bottom: 0px;
+		}
+	}
 }
 
 .form-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: white;
 
-    form {
-        display: flex;
-        flex-direction: column;
-        width: 350px;
+	form {
+		display: flex;
+		flex-direction: column;
+		width: 350px;
 
-        label {
-            margin-top: 20px;
-        }
+		label {
+			margin-top: 20px;
+		}
 
-        input {
-            width: 100%;
-            height: 40px;
-            border: none;
-            border-bottom: 1px solid #274160;
-            font-size: 1.8rem;
-        }
+		input {
+			width: 100%;
+			height: 40px;
+			border: none;
+			border-bottom: 1px solid #274160;
+			font-size: 1.8rem;
+		}
 
-        .eye {
-            height: 35px;
-            width: 35px;
-            margin-top: 6px;
-            border-bottom: 1px solid #274160;
-        }
+		.eye {
+			height: 35px;
+			width: 35px;
+			margin-top: 6px;
+			border-bottom: 1px solid #274160;
+		}
 
-        .password-container {
-            display: flex;
-            justify-content: start;
-            align-items: center;
-        }
+		.password-container {
+			display: flex;
+			justify-content: start;
+			align-items: center;
+		}
 
-        button {
-            margin-top: 10px;
-            height: 50px;
-            width: 100%;
-            border-radius: 25px;
-            box-shadow: none;
-            background-color: #274160;
-        }
-    }
+		button {
+			margin-top: 10px;
+			height: 50px;
+			width: 100%;
+			border-radius: 25px;
+			box-shadow: none;
+			background-color: #274160;
+		}
+	}
 }
 
 .social-links {
-    display: flex;
-    margin-top: 10px;
-    width: 350px;
+	display: flex;
+	margin-top: 10px;
+	width: 350px;
 
-    .fb {
-        // margin: 2%;
-        padding: 13px;
-        width: 500px;
-        text-align: center;
-        border-radius: 25px;
-        color: white;
-        background-color: #3b5998;
-    }
-      
-    .go {
-        margin: 2%;
-        padding: 13px;
-        width: 250px;
-        text-align: center;
-        border-radius: 25px;
-        color: white;
-        background-color: #DB4437;
-    }
+	.fb {
+		// margin: 2%;
+		padding: 13px;
+		width: 500px;
+		text-align: center;
+		border-radius: 25px;
+		color: white;
+		background-color: #3b5998;
+	}
+
+	.go {
+		margin: 2%;
+		padding: 13px;
+		width: 250px;
+		text-align: center;
+		border-radius: 25px;
+		color: white;
+		background-color: #db4437;
+	}
 }
